2015-05-31 22:55
Now the masks, mask areas and mask contours load into lists in the same loop.
Instead of delays, the speed is plotted.